--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.4.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "uuid": "^9.0.0"
   },
