--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # Variáveis de ambiente
 .env
+.env.local
+.env.development
+.env.test
+.env.production
 
 # Dependências
 node_modules/
@@ -9,25 +13,44 @@ node_modules/
 .aws-sam/
 samconfig.toml
 
+# Arquivos de build/distribuição
+dist/
+build/
+*.zip
+lambda-*.zip
+
 # Logs
 logs
 *.log
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Arquivos de sistema
 .DS_Store
 Thumbs.db
+.directory
 
 # Arquivos de configuração de IDE/Editor
 .idea/
 .vscode/
 *.swp
 *.swo
-
-# Diretórios de build
-dist/
-build/
+.history/
+.cache/
 
 # Arquivos temporários
 tmp/
-temp/ 
+temp/
+.tmp/
+
+# Arquivos de credenciais e chaves
+*.pem
+*.key
+*.cert
+credentials.json
+aws-credentials.json
+
+# Arquivos específicos do projeto
+secrets.json
+config.local.js
