--- a/src/gerador-conteudo/package.json
+++ b/src/gerador-conteudo/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "aws-sdk": "^2.1413.0",
     "axios": "^1.4.0",
+    "dotenv": "^16.4.7",
     "uuid": "^9.0.0"
   }
-} 
+}
